--- a/ALFT_Customization/Report_Layouts/ALFT-P-003_PurchaseOrder-Local.rdl
+++ b/ALFT_Customization/Report_Layouts/ALFT-P-003_PurchaseOrder-Local.rdl
@@ -347,7 +347,7 @@
                     <Style>
                       <FontFamily>Calibri</FontFamily>
                       <FontWeight>Bold</FontWeight>
-                      <Format>d MMM yyyy</Format>
+                      <Format>d/MM/yyyy</Format>
                     </Style>
                   </TextRun>
                 </TextRuns>
@@ -862,7 +862,6 @@
                             <PaddingBottom>2pt</PaddingBottom>
                           </Style>
                         </Textbox>
-                        <rd:Selected>true</rd:Selected>
                       </CellContents>
                     </TablixCell>
                     <TablixCell>
