--- a/ALFT_Customization/Report_Layouts/ALFT-P-004_PurchaseOrder-Imports.rdl
+++ b/ALFT_Customization/Report_Layouts/ALFT-P-004_PurchaseOrder-Imports.rdl
@@ -341,7 +341,7 @@
                     <Style>
                       <FontFamily>Calibri</FontFamily>
                       <FontWeight>Bold</FontWeight>
-                      <Format>d MMM yyyy</Format>
+                      <Format>d/MM/yyyy</Format>
                     </Style>
                   </TextRun>
                 </TextRuns>
