--- a/ALFT_Customization/Report_Layouts/ALFT-S-003_InvoiceReport(Item Wise).rdl
+++ b/ALFT_Customization/Report_Layouts/ALFT-S-003_InvoiceReport(Item Wise).rdl
@@ -652,7 +652,9 @@
                                   </Style>
                                 </TextRun>
                               </TextRuns>
-                              <Style />
+                              <Style>
+                                <TextAlign>Center</TextAlign>
+                              </Style>
                             </Paragraph>
                           </Paragraphs>
                           <rd:DefaultName>invoiceNO</rd:DefaultName>
@@ -666,6 +668,7 @@
                             <PaddingBottom>2pt</PaddingBottom>
                           </Style>
                         </Textbox>
+                        <rd:Selected>true</rd:Selected>
                       </CellContents>
                     </TablixCell>
                     <TablixCell>
@@ -768,7 +771,7 @@
             <Top>0.36724cm</Top>
             <Left>0cm</Left>
             <Height>1.57042cm</Height>
-            <Width>26.00854cm</Width>
+            <Width>26.00855cm</Width>
             <Style>
               <Border>
                 <Style>None</Style>
@@ -779,7 +782,7 @@
         <Height>2.14312cm</Height>
         <Style />
       </Body>
-      <Width>26.00854cm</Width>
+      <Width>26.00855cm</Width>
       <Page>
         <PageHeight>21cm</PageHeight>
         <PageWidth>29.7cm</PageWidth>
